--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -27,10 +27,42 @@
             android:layout_height="wrap_content"
             style="@style/Headline_App_name"
             android:text="@string/app_extended_title"
-
             android:textSize="@dimen/text_huge" />
 
     </LinearLayout>
+
+
+    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/hg25"
+        app:layout_constraintBottom_toTopOf="@id/hg80"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+
+        app:showTopShadow="false"
+        app:showBottomShadow="false"
+        app:captionMargin="0dp"
+        app:autoPlay="true"
+        app:autoPlayDelay="10000"
+        app:showNavigationButtons="false"
+        app:showIndicator="true"
+        app:scaleOnScroll="true"
+        app:carouselType="SHOWCASE"
+
+        android:id="@+id/carousel"
+
+        />
+
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/vg05"
+        app:layout_constraintEnd_toStartOf="@id/vg95"
+        app:layout_constraintBottom_toTopOf="@id/hg95"
+        android:text="@string/login_with_discord"
+        android:textAllCaps="false"
+        style="@style/buttonLogin"/>
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -53,6 +85,20 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.95" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/hg25"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/hg80"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.80" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/hg05"
