--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,9 @@
 <resources>
     <dimen name="text_headline">64sp</dimen>
     <dimen name="text_huge">24sp</dimen>
+    <dimen name="dp_24">24dp</dimen>
+    <dimen name="padding_24">@dimen/dp_24</dimen>
+    <dimen name="text_large">20sp</dimen>
+    <dimen name="dp_12">12dp</dimen>
+    <dimen name="corner_radius_button_12">@dimen/dp_12</dimen>
 </resources>
