--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="surface_bright_grey">#36393F</color>
     <color name="discord_default">#7289DA</color>
     <color name="discord_default_alpha">#807289DA</color>
+    <color name="card_background">#A6323237</color>
 </resources>
