--- a/app/src/main/res/drawable/gradient_top_bottom.xml
+++ b/app/src/main/res/drawable/gradient_top_bottom.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#000000"
-        android:centerColor="#000000"
+        android:startColor="@color/surface_dark"
+        android:centerColor="@color/surface_dark"
         android:endColor="#00000000"
         android:centerY="0.2"
         android:angle="-90"/>
