Small improvements to the UI

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -34,7 +34,7 @@
 
     <org.imaginativeworld.whynotimagecarousel.ImageCarousel
         android:id="@+id/carousel"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         app:autoPlay="true"
         app:autoPlayDelay="10000"
@@ -43,10 +43,11 @@
 
 
         app:carouselType="SHOWCASE"
-        app:layout_constraintBottom_toTopOf="@id/hg80"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hg25"
+        app:layout_constraintBottom_toTopOf="@id/login_button"
+        app:layout_constraintStart_toEndOf="@id/vg05"
+        app:layout_constraintEnd_toStartOf="@id/vg95"
+        app:layout_constraintTop_toBottomOf="@id/hg30"
+        android:layout_marginBottom="@dimen/dp_16"
         app:scaleOnScroll="true"
         app:showBottomShadow="false"
         app:showIndicator="true"
@@ -55,20 +56,14 @@
 
         />
 
-    <me.relex.circleindicator.CircleIndicator2
-        android:id="@+id/indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/carousel" />
-
     <com.google.android.material.button.MaterialButton
         style="@style/buttonLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/login_with_discord"
         android:textAllCaps="false"
+        android:id="@+id/login_button"
+        android:textSize="@dimen/text_size_18_sp"
         app:layout_constraintBottom_toTopOf="@id/hg95"
         app:layout_constraintEnd_toStartOf="@id/vg95"
         app:layout_constraintStart_toEndOf="@id/vg05" />
@@ -96,7 +91,7 @@
         app:layout_constraintGuide_percent="0.95" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/hg25"
+        android:id="@+id/hg30"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -107,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.80" />
+        app:layout_constraintGuide_percent="0.85" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/hg05"
