--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -16,14 +16,14 @@
         app:layout_constraintTop_toBottomOf="@id/hg05">
 
         <TextView
-            style="@style/Headline_App_name"
+            style="@style/myFontStyle.Headline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_title"
             android:textSize="@dimen/text_headline" />
 
         <TextView
-            style="@style/Headline_App_name"
+            style="@style/myFontStyle.Regular"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/app_extended_title"
