--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_16">16dp</dimen>
     <dimen name="text_size_18_sp">18sp</dimen>
+    <dimen name="control_image_size">48dp</dimen>
+    <dimen name="control_icon_size">24dp</dimen>
 </resources>
