--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Headline_App_name">
 
-    </style>
 
     <style name="myFontStyle">
         <item name="android:includeFontPadding">false</item>
@@ -18,6 +16,10 @@
 
     <style name="myFontStyle.Regular">
         <item name="android:fontFamily">@font/avenir_book</item>
+    </style>
+
+    <style name="myFontStyle.Regular.FontPadding">
+        <item name="android:includeFontPadding">true</item>
     </style>
 
     <style name="ownButton" parent="Widget.Material3.Button">
