--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,29 +7,30 @@
     android:background="@drawable/main_background_gradient"
     tools:context=".MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?android:attr/actionBarSize"
-            android:layout_marginTop="5dp"
-            android:background="@android:color/transparent"
-            android:paddingStart="14dp"
-            android:paddingEnd="14dp"
-            app:contentInsetEnd="0dp"
-            app:contentInsetStart="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:attr/actionBarSize"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/transparent"
+        app:contentInsetEnd="0dp"
+        android:layout_marginEnd="12dp"
+        app:contentInsetStart="0dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
             <FrameLayout
                 android:id="@+id/toolbar_icon_container"
+                android:layout_centerVertical="true"
                 android:layout_width="@dimen/control_image_size"
                 android:layout_height="@dimen/control_image_size"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <ImageView
                     android:id="@+id/ic_menu"
@@ -40,6 +41,12 @@
                     app:tint="@color/white" />
 
             </FrameLayout>
+            <Space
+                android:id="@+id/spacing"
+                android:layout_toEndOf="@id/toolbar_icon_container"
+                android:layout_width="14dp"
+                android:visibility="gone"
+                android:layout_height="match_parent" />
 
             <TextView
                 android:id="@+id/toolbar_title"
@@ -47,95 +54,101 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/home"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/spacing"
                 android:textSize="@dimen/text_huge" />
 
-            <LinearLayout
-                android:id="@+id/toolbar_menu_items"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/control_image_size"
-                android:layout_gravity="end"
-                android:orientation="horizontal">
+        </RelativeLayout>
 
-                <FrameLayout
-                    android:id="@+id/icon_server"
-                    android:layout_width="@dimen/control_image_size"
-                    android:layout_height="@dimen/control_image_size"
-                    android:visibility="gone">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:cardCornerRadius="@dimen/control_icon_size">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            tools:src="@drawable/pawel" />
-
-                    </androidx.cardview.widget.CardView>
-                </FrameLayout>
-
-                <Space
-                    android:id="@+id/title_spacing"
-                    android:layout_width="10dp"
-                    android:layout_height="match_parent" />
-
-                <FrameLayout
-                    android:id="@+id/icon_profile"
-                    android:layout_width="@dimen/control_image_size"
-                    android:layout_height="@dimen/control_image_size">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        app:cardCornerRadius="@dimen/control_icon_size">
-
-                        <ImageView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            tools:src="@drawable/profile" />
-
-                    </androidx.cardview.widget.CardView>
-                </FrameLayout>
-            </LinearLayout>
-
-        </com.google.android.material.appbar.MaterialToolbar>
-
-        <fragment
-            android:id="@+id/container"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
-            app:navGraph="@navigation/app_navigation_graph" />
-
-        <TextView
-            android:id="@+id/logoutButton"
+        <LinearLayout
+            android:id="@+id/toolbar_menu_items"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/logout"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="@dimen/control_image_size"
+            android:layout_gravity="end"
+            android:orientation="horizontal">
 
-        <github.com.st235.lib_expandablebottombar.ExpandableBottomBar
-            android:id="@+id/bottom_navigation"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:exb_backgroundColor="@color/surface_dark"
-            app:exb_itemBackgroundOpacity="0.2"
-            app:exb_itemInactiveColor="@color/white"
-            app:exb_items="@menu/bottom_menu"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            <FrameLayout
+                android:id="@+id/icon_server"
+                android:layout_width="@dimen/control_image_size"
+                android:layout_height="@dimen/control_image_size"
+                android:visibility="visible">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/control_icon_size">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:id="@+id/server_picture"
+                        android:src="@drawable/pawel" />
+
+                </androidx.cardview.widget.CardView>
+            </FrameLayout>
+
+            <Space
+                android:id="@+id/title_spacing"
+                android:layout_width="14dp"
+                android:visibility="visible"
+                android:layout_height="match_parent" />
+
+            <FrameLayout
+                android:id="@+id/icon_profile"
+                android:layout_width="@dimen/control_image_size"
+                android:layout_height="@dimen/control_image_size">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/control_icon_size">
+
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:id="@+id/profile_picture"
+                        android:src="@drawable/profile" />
+
+                </androidx.cardview.widget.CardView>
+            </FrameLayout>
+        </LinearLayout>
+
+    </com.google.android.material.appbar.MaterialToolbar>
+
+    <fragment
+        android:id="@+id/container"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/app_navigation_graph" />
+
+
+    <TextView
+        android:id="@+id/logoutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <github.com.st235.lib_expandablebottombar.ExpandableBottomBar
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        app:exb_item_vertical_margin="@dimen/dp_16"
+        android:layout_height="wrap_content"
+        app:exb_backgroundColor="@color/surface_dark"
+        app:exb_itemBackgroundOpacity="0.2"
+        app:exb_itemInactiveColor="@color/white"
+        app:exb_items="@menu/bottom_menu"
+
+        app:exb_transitionDuration="500"
+        app:layout_behavior="github.com.st235.lib_expandablebottombar.behavior.ExpandableBottomBarScrollableBehavior"
+        app:layout_constraintBottom_toBottomOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
