--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,9 @@
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         android:layout_marginTop="5dp"
+        android:layout_marginEnd="@dimen/dp_12"
         android:background="@android:color/transparent"
         app:contentInsetEnd="0dp"
-        android:layout_marginEnd="12dp"
         app:contentInsetStart="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,9 +27,9 @@
 
             <FrameLayout
                 android:id="@+id/toolbar_icon_container"
+                android:layout_width="@dimen/control_container_size"
+                android:layout_height="@dimen/control_container_size"
                 android:layout_centerVertical="true"
-                android:layout_width="@dimen/control_image_size"
-                android:layout_height="@dimen/control_image_size"
                 android:visibility="visible">
 
                 <ImageView
@@ -41,21 +41,22 @@
                     app:tint="@color/white" />
 
             </FrameLayout>
+
             <Space
                 android:id="@+id/spacing"
+                android:layout_width="@dimen/dp_12"
+                android:layout_height="match_parent"
                 android:layout_toEndOf="@id/toolbar_icon_container"
-                android:layout_width="14dp"
-                android:visibility="gone"
-                android:layout_height="match_parent" />
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/toolbar_title"
                 style="@style/myFontStyle.Regular.FontPadding"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/home"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@id/spacing"
+                android:text="@string/home"
                 android:textSize="@dimen/text_huge" />
 
         </RelativeLayout>
@@ -79,10 +80,10 @@
                     app:cardCornerRadius="@dimen/control_icon_size">
 
                     <ImageView
+                        android:id="@+id/server_picture"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:id="@+id/server_picture"
                         android:src="@drawable/pawel" />
 
                 </androidx.cardview.widget.CardView>
@@ -91,8 +92,8 @@
             <Space
                 android:id="@+id/title_spacing"
                 android:layout_width="14dp"
-                android:visibility="visible"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:visibility="visible" />
 
             <FrameLayout
                 android:id="@+id/icon_profile"
@@ -105,10 +106,10 @@
                     app:cardCornerRadius="@dimen/control_icon_size">
 
                     <ImageView
+                        android:id="@+id/profile_picture"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
-                        android:id="@+id/profile_picture"
                         android:src="@drawable/profile" />
 
                 </androidx.cardview.widget.CardView>
@@ -122,33 +123,23 @@
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
         app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:navGraph="@navigation/app_navigation_graph" />
 
-
-    <TextView
-        android:id="@+id/logoutButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/logout"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
 
     <github.com.st235.lib_expandablebottombar.ExpandableBottomBar
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
-        app:exb_item_vertical_margin="@dimen/dp_16"
         android:layout_height="wrap_content"
         app:exb_backgroundColor="@color/surface_dark"
         app:exb_itemBackgroundOpacity="0.2"
         app:exb_itemInactiveColor="@color/white"
+        app:exb_item_vertical_margin="@dimen/dp_16"
         app:exb_items="@menu/bottom_menu"
 
-        app:exb_transitionDuration="500"
+        app:exb_transitionDuration="250"
         app:layout_behavior="github.com.st235.lib_expandablebottombar.behavior.ExpandableBottomBarScrollableBehavior"
         app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
