--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="discord_default_alpha">#807289DA</color>
     <color name="card_background">#A6323237</color>
     <color name="active_color">#e53371</color>
+    <color name="white_stroke">#EDF2F4</color>
 </resources>
