--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,9 @@
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_16">16dp</dimen>
     <dimen name="text_size_18_sp">18sp</dimen>
-    <dimen name="control_image_size">48dp</dimen>
+    <dimen name="control_image_size">36dp</dimen>
+    <dimen name="control_container_size">48dp</dimen>
     <dimen name="control_icon_size">24dp</dimen>
+    <dimen name="padding_8">8dp</dimen>
+    <dimen name="text_medium">16sp</dimen>
 </resources>
