--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -4,6 +4,73 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_background_gradient"
     tools:context=".LoadingActivity">
+
+    <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/loading"
+       android:indeterminate="true"
+        android:indeterminateDrawable="@drawable/progress_bar_color"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/infoView"
+        android:textSize="@dimen/text_medium"
+        app:layout_constraintTop_toBottomOf="@id/loading"
+        android:text="Please wait..."
+        android:textAlignment="center"
+        android:textColor="@color/white_stroke"
+        android:padding="@dimen/padding_8"
+        />
+
+    <ProgressBar
+        android:id="@+id/progress_horizontal"
+        style="@android:style/Widget.DeviceDefault.ProgressBar.Horizontal"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toRightOf="@id/vg10"
+        app:layout_constraintRight_toLeftOf="@id/vg90"
+        app:layout_constraintTop_toBottomOf="@id/infoView"
+        android:max="100"
+        android:min="0"
+        android:progress="50"
+        android:progressBackgroundTint="@color/surface_dark"
+        android:progressTint="@color/active_color"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/infoDetail"
+        app:layout_constraintTop_toBottomOf="@id/progress_horizontal"
+        tools:text="Getting information"
+        android:textAlignment="center"
+        android:textSize="@dimen/text_very_small"
+        android:textColor="@color/white_stroke"
+        android:padding="@dimen/padding_8"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.1"
+        android:id="@+id/vg10"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.9"
+        android:id="@+id/vg90"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
