--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -41,7 +41,7 @@
         android:max="100"
         android:min="0"
         android:progress="50"
-        android:progressBackgroundTint="@color/surface_dark"
+        android:progressBackgroundTint="@color/white_stroke"
         android:progressTint="@color/active_color"
         />
 
