--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,4 +16,6 @@
     <dimen name="control_icon_size">24dp</dimen>
     <dimen name="padding_8">8dp</dimen>
     <dimen name="text_medium">16sp</dimen>
+    <dimen name="dp_4">4dp</dimen>
+    <dimen name="dp_6">6dp</dimen>
 </resources>
