--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -95,7 +95,36 @@
             android:fadingEdge="vertical"
             android:id="@+id/news_rv"
             android:fadingEdgeLength="@dimen/dp_16"
-            tools:listitem="@layout/info_card_layout" />
+            tools:listitem="@layout/info_card_layout"
+            android:visibility="gone" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            android:orientation="vertical">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="match_parent"
+                android:layout_height="128dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="@dimen/dp_16"
+                app:lottie_loop="true"
+                app:lottie_autoPlay="true"
+                app:lottie_rawRes="@raw/cat_sleeping"/>
+
+            <TextView
+                style="@style/myFontStyle.Headline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:lineSpacingExtra="@dimen/dp_4"
+                android:text="@string/nothing_to_see_here"
+                android:textAlignment="center"
+                android:textSize="@dimen/text_large"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+
 
 
     </LinearLayout>
