--- a/app/src/main/res/layout/fragment_server_selection.xml
+++ b/app/src/main/res/layout/fragment_server_selection.xml
@@ -4,15 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@android:color/transparent"
     tools:context=".fragments.BottomSheet.ServerSelectionFragment">
 
     <FrameLayout
         style="@style/myBottomModalSheet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
-
+       >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -48,6 +47,7 @@
                 app:layout_constraintEnd_toStartOf="@id/filter_icon"
                 app:layout_constraintTop_toTopOf="@id/title_label"
                 app:tint="@color/white" />
+
             <ImageView
                 android:id="@+id/filter_icon"
                 android:layout_width="@dimen/dp_36"
@@ -59,14 +59,45 @@
                 app:tint="@color/white" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/servers_rv"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_16"
-                app:layout_constraintTop_toBottomOf="@id/title_label"
-                app:layout_constraintStart_toEndOf="@id/vg04"
+                android:visibility="gone"
                 app:layout_constraintEnd_toStartOf="@id/vg96"
-                tools:listitem="@layout/add_server_card_layout"
-                android:id="@+id/servers_rv"/>
+                app:layout_constraintStart_toEndOf="@id/vg04"
+                app:layout_constraintTop_toBottomOf="@id/title_label"
+                tools:listitem="@layout/add_server_card_layout" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/empty_layout"
+                app:layout_constraintEnd_toStartOf="@id/vg96"
+                app:layout_constraintStart_toEndOf="@id/vg04"
+                app:layout_constraintTop_toBottomOf="@id/title_label">
+
+                <com.airbnb.lottie.LottieAnimationView
+                    android:layout_width="wrap_content"
+                    android:layout_height="256dp"
+                    app:lottie_autoPlay="true"
+                    app:lottie_loop="true"
+                    app:lottie_rawRes="@raw/empty_ghost" />
+
+                <TextView
+                    style="@style/myFontStyle.Headline"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/dp_64"
+                    android:lineSpacingExtra="@dimen/dp_4"
+                    android:text="Boooooo!\nSeems like you don't have any eligible servers yet.\nDon't get hunted, create one right now!"
+                    android:textAlignment="center"
+                    android:textSize="@dimen/text_medium"
+                    android:layout_gravity="center"/>
+            </LinearLayout>
+
+
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/vg04"
