--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,5 @@
     <dimen name="dp_6">6dp</dimen>
     <dimen name="text_tiny">10sp</dimen>
     <dimen name="dp_36">36dp</dimen>
+    <dimen name="dp_64">64dp</dimen>
 </resources>
