--- a/app/src/main/res/layout/add_server_card_layout.xml
+++ b/app/src/main/res/layout/add_server_card_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/dp_8"
     android:orientation="vertical">
 
@@ -139,7 +139,7 @@
                     android:text="@string/missing_permissions"
                     android:textSize="@dimen/text_medium"
                     android:textStyle="italic"
-                    android:visibility="visible"
+                    android:visibility="gone"
                     android:id="@+id/missing_permissions" />
 
 
