--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <dimen name="text_tiny">10sp</dimen>
     <dimen name="dp_36">36dp</dimen>
     <dimen name="dp_64">64dp</dimen>
+    <dimen name="dp_32">32dp</dimen>
 </resources>
