Add Server Info Layout Card

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,13 +18,44 @@
         android:layout_marginEnd="@dimen/dp_8"
         android:orientation="vertical">
 
-        <com.google.android.material.button.MaterialButton
-            style="@style/buttonChoose"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/choose_server"
-            android:id="@+id/button_choose"
-            app:icon="@drawable/ic_expand_more" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <FrameLayout
+                android:id="@+id/server_icon_frame"
+                android:layout_width="@dimen/control_image_size"
+                android:layout_marginStart="@dimen/dp_6"
+                android:visibility="gone"
+                android:layout_centerVertical="true"
+                android:layout_height="@dimen/control_image_size">
+
+                <androidx.cardview.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    app:cardCornerRadius="@dimen/control_icon_size">
+
+                    <ImageView
+                        android:id="@+id/server_icon"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile" />
+
+                </androidx.cardview.widget.CardView>
+            </FrameLayout>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_choose"
+                style="@style/buttonChoose"
+                android:layout_width="match_parent"
+                android:text="@string/choose_server"
+                app:icon="@drawable/ic_expand_more" />
+
+
+        </RelativeLayout>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
