--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,6 @@
 <resources>
 
 
-
     <style name="myFontStyle">
         <item name="android:includeFontPadding">false</item>
         <item name="android:lineSpacingExtra">0dp</item>
@@ -44,6 +43,7 @@
         <item name="android:clickable">true</item>
         <item name="android:textAlignment">viewStart</item>
         <item name="iconGravity">end</item>
+        <item name="android:layout_height">@dimen/dp_56</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:fontFamily">@font/avenir_book</item>
         <item name="iconTint">@color/white</item>
@@ -53,8 +53,7 @@
         <item name="iconSize">@dimen/dp_24</item>
         <item name="android:marqueeRepeatLimit">marquee_forever</item>
         <item name="strokeColor">@color/white_stroke</item>
-        <item name="android:paddingTop">@dimen/dp_12</item>
-        <item name="android:paddingBottom">@dimen/dp_12</item>
+        <item name="android:paddingStart">@dimen/dp_24</item>
         <item name="rippleColor">@color/button_white_ripple</item>
 
     </style>
@@ -66,10 +65,14 @@
         <item name="shapeAppearance">@style/modalShapeAppearance</item>
 
     </style>
+
     <style name="modalShapeAppearance" parent="ShapeAppearance.Material3.LargeComponent">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">@dimen/dp_16</item>
 
     </style>
+
+
+
 
 </resources>
